(Bug #144). [David]

=item *

The field type profile now properly validates code select code and lets the
user know if it's not valid. [David]

=item *

The validation of code select field code is now consistent between the element
type profile, the field type profile, and the SOAP element type interface.
Thanks to Krzysztof Rudnik for the report (Bug #140). [David]

=back

=head1 VERSION 1.10.9 (2010-01-28)

=head2 Improvements

=over

=item *

The SFTP mover now respects a port specification in the host name (e.g,
"foo.example.com:22"), just like the FTP mover. Thanks to Iván Chavero for the
report and fix. [David]

=item *

The virtual FTP server now assumes that template files uploaded to it are
encoded in the user's preferred encoding. So if you have Windows gremlins in
your templates, you can set your Character Set preference to "CP1252" and it
will just work. Thanks to Phillip Smith for the report (Bug #124). [David]

=back

=head2 Bug Fixes

=over

=item *

Cover dates are no longer exported via the SOAP interface with the wrong year
(2009) when their dates are in the first three days of 2010. Thanks to Paul
Orrock for the spot (Bug #122) and David Oliveira via Bret Dawson for the fix!
[David]

=item *

Fixed an error in L<Bric::Biz::Contact> where a boolean value was not passed
to the database as a boolean. [David Oliveira]

=item *

Fixed the F<favicon.ico> redirect so that it points to a full URL, not just a
URI path. [David]

=back

=head1 VERSION 1.10.8 (2009-11-14)

=head2 Improvements

=over

=item *

Added the C<sql_type> element to the export of field types from SOAP. This
prevents the SOAP server from having to guess the SQL type of a field type
when updating an element type. Thanks to David Oliveira for the report (Bug
#79). [David]

=item *

The C<AddModule> lines are now commented-out in the F<httpd.conf> generated by
the installer. As near as I can tell from my research, this directive hasn't